removed padding id

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "dev": "set NODE_ENV=development &&  nodemon app.js",
+    "dev": "set NODE_ENV=development && nodemon --experimental-modules app.js",
     "swagger": "node tasks/generate_swagger.js"
   },
   "license": "MIT",
